// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimplePopover /> SimplePopover with multiple props matches with snapshot 1`] = `
.c4 {
  margin-bottom: 0.3125rem;
}

.c6 {
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c8 {
  margin-top: 1.875rem;
}

.c5 {
  --Title-css-color: #222;
  font-family: Maax,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: .01rem;
  -moz-letter-spacing: .01rem;
  -ms-letter-spacing: .01rem;
  letter-spacing: .01rem;
  font-weight: 600;
  color: #222;
  color: var(--Title-css-color);
}

.c5.k-Title--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c5.k-Title--italic {
  font-style: italic;
}

.c5.k-Title--primary {
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
  line-height: calc(1em + 0.25rem);
}

.c5.k-Title--secondary {
  font-size: 2rem;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
  line-height: calc(1em + 0.25rem);
}

.c5.k-Title--tertiary {
  font-size: 1.75rem;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
  line-height: calc(1em + 0.25rem);
}

.c5.k-Title--quaternary {
  font-size: 1.5rem;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
  line-height: calc(1em + 0.125rem);
}

.c5.k-Title--quinary {
  font-size: 1.25rem;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  line-height: calc(1em + 0.125rem);
}

.c5.k-Title--senary {
  font-size: 1.125rem;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  line-height: calc(1em + 0.125rem);
}

.c5.k-Title--septenary {
  font-size: 1rem;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  line-height: calc(1em + 0.125rem);
}

.c7 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c7.k-Paragraph--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c7.k-Paragraph--normalLineHeight {
  line-height: normal;
}

.c7.k-Paragraph--italic {
  font-style: italic;
}

.c7.k-Paragraph--primary {
  font-size: 1rem;
  line-height: 1.6;
}

.c7.k-Paragraph--secondary {
  font-size: 0.875rem;
  line-height: 1.6;
}

.c7.k-Paragraph--tertiary {
  font-size: 0.75rem;
  line-height: 1.6;
}

.c7.k-Paragraph--quaternary {
  font-size: 0.75rem;
  line-height: 1.6;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1:disabled,
.c1.k-Button--disabled {
  cursor: not-allowed;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c1:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c1:focus-visible {
  outline-color: #bae8fd;
}

.c1.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c1.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c1.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c1.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c1.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c1.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c1.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c1.k-Button--fit-fluid {
  width: 100%;
}

.c1.k-Button--orion:not(.k-Button--rounded).k-Button--nano,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--micro,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--tiny {
  --Button-border-radius: 0.25rem;
}

.c1.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--big,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
  --Button-border-radius: 0.375rem;
}

.c1.k-Button--rounded {
  --Button-border-radius: 50%;
}

.c1 svg:not(.k-ColorSvg),
.c1 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:hover,
.c1:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c1:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c1:focus-visible {
  outline-color: #bae8fd;
}

.c1:disabled,
.c1.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c10 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c10:disabled,
.c10.k-Button--disabled {
  cursor: not-allowed;
}

.c10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c10:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c10:focus-visible {
  outline-color: #bae8fd;
}

.c10.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c10.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c10.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c10.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c10.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c10.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c10.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c10.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c10.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c10.k-Button--fit-fluid {
  width: 100%;
}

.c10.k-Button--orion:not(.k-Button--rounded).k-Button--nano,
.c10.k-Button--orion:not(.k-Button--rounded).k-Button--micro,
.c10.k-Button--orion:not(.k-Button--rounded).k-Button--tiny {
  --Button-border-radius: 0.25rem;
}

.c10.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
.c10.k-Button--orion:not(.k-Button--rounded).k-Button--big,
.c10.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
.c10.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
  --Button-border-radius: 0.375rem;
}

.c10.k-Button--rounded {
  --Button-border-radius: 50%;
}

.c10 svg:not(.k-ColorSvg),
.c10 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c10:hover,
.c10:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c10:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c10:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c10:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c10:focus-visible {
  outline-color: #bae8fd;
}

.c10:disabled,
.c10.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  padding: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: solid #eee 0.125rem;
  box-sizing: border-box;
  max-width: 34.6875rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-bottom: 1.25rem;
  background-color: #fff;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.3s ease,visibility 0s ease;
  transition: opacity 0.3s ease,visibility 0s ease;
  -webkit-transition-delay: 0s,0s;
  transition-delay: 0s,0s;
}

.c0[aria-hidden='true'] {
  opacity: 0;
  visibility: hidden;
  -webkit-transition-delay: 0s,0.3s;
  transition-delay: 0s,0.3s;
}

.c3 {
  display: none;
  min-width: 5rem;
  min-height: 5rem;
  margin-right: 2.5rem;
  border-radius: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #bae8fd;
}

.c2 {
  position: absolute;
  top: -0.125rem;
  right: -0.125rem;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c9 > * + * {
  margin-top: 1.25rem;
}

@media (min-width:40rem) {
  .c5.k-Title--primary {
    font-size: 2.875rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: 1em;
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--primary {
    font-size: 4rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: 1em;
  }
}

@media (min-width:40rem) {
  .c5.k-Title--secondary {
    font-size: 2.25rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--secondary {
    font-size: 2.875rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: 1em;
  }
}

@media (min-width:40rem) {
  .c5.k-Title--tertiary {
    font-size: 2rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--tertiary {
    font-size: 2.25rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:40rem) {
  .c5.k-Title--quaternary {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.015em;
    -moz-letter-spacing: -0.015em;
    -ms-letter-spacing: -0.015em;
    letter-spacing: -0.015em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--quaternary {
    font-size: 2rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:40rem) {
  .c5.k-Title--quinary {
    font-size: 1.5rem;
    -webkit-letter-spacing: -0.015em;
    -moz-letter-spacing: -0.015em;
    -ms-letter-spacing: -0.015em;
    letter-spacing: -0.015em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--quinary {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.015em;
    -moz-letter-spacing: -0.015em;
    -ms-letter-spacing: -0.015em;
    letter-spacing: -0.015em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:40rem) {
  .c5.k-Title--senary {
    font-size: 1.25rem;
    -webkit-letter-spacing: -0.01em;
    -moz-letter-spacing: -0.01em;
    -ms-letter-spacing: -0.01em;
    letter-spacing: -0.01em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--senary {
    font-size: 1.5rem;
    -webkit-letter-spacing: -0.015em;
    -moz-letter-spacing: -0.015em;
    -ms-letter-spacing: -0.015em;
    letter-spacing: -0.015em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:40rem) {
  .c5.k-Title--septenary {
    font-size: 1.125rem;
    -webkit-letter-spacing: -0.01em;
    -moz-letter-spacing: -0.01em;
    -ms-letter-spacing: -0.01em;
    letter-spacing: -0.01em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--septenary {
    font-size: 1.25rem;
    -webkit-letter-spacing: -0.01em;
    -moz-letter-spacing: -0.01em;
    -ms-letter-spacing: -0.01em;
    letter-spacing: -0.01em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:40rem) {
  .c7.k-Paragraph--primary {
    font-size: 1.125rem;
  }
}

@media (min-width:67.5rem) {
  .c7.k-Paragraph--primary {
    font-size: 1.25rem;
  }
}

@media (min-width:40rem) {
  .c7.k-Paragraph--secondary {
    font-size: 1rem;
  }
}

@media (min-width:67.5rem) {
  .c7.k-Paragraph--secondary {
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c7.k-Paragraph--tertiary {
    font-size: 0.875rem;
  }
}

@media (min-width:67.5rem) {
  .c7.k-Paragraph--tertiary {
    font-size: 0.875rem;
  }
}

@media (min-width:40rem) {
  .c7.k-Paragraph--quaternary {
    font-size: 0.75rem;
  }
}

@media (min-width:67.5rem) {
  .c7.k-Paragraph--quaternary {
    font-size: 0.75rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
  .c1.k-Button--orion:not(.k-Button--rounded).k-Button--big,
  .c1.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
  .c1.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
    --Button-border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c10.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c10.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c10.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c10[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c10[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c10[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c10[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c10.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
  .c10.k-Button--orion:not(.k-Button--rounded).k-Button--big,
  .c10.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
  .c10.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
    --Button-border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    padding: 3.125rem 2.5rem;
  }
}

@media (min-width:640px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:640px) {
  .c9 > * + * {
    margin-top: 0;
    margin-left: 1.25rem;
  }
}

<div
  aria-hidden={true}
  aria-labelledby="popover-title"
  className="c0"
  role="dialog"
>
  <button
    aria-label="Close"
    className="c1 k-Button c2 k-Button--micro k-Button--hydrogen k-Button--orion k-Button--fit-icon k-Button--mobile-fit-none"
    onClick={[Function]}
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      fill="#fff"
      height="8"
      viewBox="0 0 8 8"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
      />
      <path
        d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
      />
    </svg>
  </button>
  <div
    className="c3"
  >
    <p>
      illus
    </p>
  </div>
  <div>
    <div
      className="c4"
    >
      <h2
        className="c5 k-Title k-Title--senary k-Title--noMargin"
        id="popover-title"
        style={
          Object {
            "--Title-css-color": null,
          }
        }
      >
        This popover has a title
      </h2>
    </div>
    <div
      className="c6"
    >
      <p
        className="c7 k-Paragraph k-Paragraph--tertiary"
      >
        Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. 
      </p>
    </div>
    <div
      className="c8 c9"
    >
      <button
        className="c1 k-Button k-Button--tiny k-Button--hydrogen k-Button--orion k-Button--fit-min-width k-Button--mobile-fit-none"
        onClick={[Function]}
        style={
          Object {
            "--Button-border-radius": null,
          }
        }
        type="button"
      >
        J’ai compris
      </button>
      <button
        className="c10 k-Button k-Button--tiny k-Button--helium k-Button--orion k-Button--fit-min-width k-Button--mobile-fit-none"
        onClick={[Function]}
        style={
          Object {
            "--Button-border-radius": null,
          }
        }
        type="button"
      >
        Mes préférences
      </button>
    </div>
  </div>
</div>
`;

exports[`<SimplePopover /> simple SimplePopover  matches with snapshot 1`] = `
.c3 {
  margin-bottom: 0.3125rem;
}

.c5 {
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c4 {
  --Title-css-color: #222;
  font-family: Maax,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: .01rem;
  -moz-letter-spacing: .01rem;
  -ms-letter-spacing: .01rem;
  letter-spacing: .01rem;
  font-weight: 600;
  color: #222;
  color: var(--Title-css-color);
}

.c4.k-Title--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c4.k-Title--italic {
  font-style: italic;
}

.c4.k-Title--primary {
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
  line-height: calc(1em + 0.25rem);
}

.c4.k-Title--secondary {
  font-size: 2rem;
  -webkit-letter-spacing: -0.02em;
  -moz-letter-spacing: -0.02em;
  -ms-letter-spacing: -0.02em;
  letter-spacing: -0.02em;
  line-height: calc(1em + 0.25rem);
}

.c4.k-Title--tertiary {
  font-size: 1.75rem;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
  line-height: calc(1em + 0.25rem);
}

.c4.k-Title--quaternary {
  font-size: 1.5rem;
  -webkit-letter-spacing: -0.015em;
  -moz-letter-spacing: -0.015em;
  -ms-letter-spacing: -0.015em;
  letter-spacing: -0.015em;
  line-height: calc(1em + 0.125rem);
}

.c4.k-Title--quinary {
  font-size: 1.25rem;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  line-height: calc(1em + 0.125rem);
}

.c4.k-Title--senary {
  font-size: 1.125rem;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  line-height: calc(1em + 0.125rem);
}

.c4.k-Title--septenary {
  font-size: 1rem;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
  line-height: calc(1em + 0.125rem);
}

.c6 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c6.k-Paragraph--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c6.k-Paragraph--normalLineHeight {
  line-height: normal;
}

.c6.k-Paragraph--italic {
  font-style: italic;
}

.c6.k-Paragraph--primary {
  font-size: 1rem;
  line-height: 1.6;
}

.c6.k-Paragraph--secondary {
  font-size: 0.875rem;
  line-height: 1.6;
}

.c6.k-Paragraph--tertiary {
  font-size: 0.75rem;
  line-height: 1.6;
}

.c6.k-Paragraph--quaternary {
  font-size: 0.75rem;
  line-height: 1.6;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1:disabled,
.c1.k-Button--disabled {
  cursor: not-allowed;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c1:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c1:focus-visible {
  outline-color: #bae8fd;
}

.c1.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c1.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c1.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c1.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c1.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c1.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c1.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c1.k-Button--fit-fluid {
  width: 100%;
}

.c1.k-Button--orion:not(.k-Button--rounded).k-Button--nano,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--micro,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--tiny {
  --Button-border-radius: 0.25rem;
}

.c1.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--big,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
.c1.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
  --Button-border-radius: 0.375rem;
}

.c1.k-Button--rounded {
  --Button-border-radius: 50%;
}

.c1 svg:not(.k-ColorSvg),
.c1 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:hover,
.c1:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c1:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c1:focus-visible {
  outline-color: #bae8fd;
}

.c1:disabled,
.c1.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  padding: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: solid #eee 0.125rem;
  box-sizing: border-box;
  max-width: 34.6875rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-bottom: 1.25rem;
  background-color: #fff;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.3s ease,visibility 0s ease;
  transition: opacity 0.3s ease,visibility 0s ease;
  -webkit-transition-delay: 0s,0s;
  transition-delay: 0s,0s;
}

.c0[aria-hidden='true'] {
  opacity: 0;
  visibility: hidden;
  -webkit-transition-delay: 0s,0.3s;
  transition-delay: 0s,0.3s;
}

.c2 {
  position: absolute;
  top: -0.125rem;
  right: -0.125rem;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

@media (min-width:40rem) {
  .c4.k-Title--primary {
    font-size: 2.875rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: 1em;
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--primary {
    font-size: 4rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: 1em;
  }
}

@media (min-width:40rem) {
  .c4.k-Title--secondary {
    font-size: 2.25rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--secondary {
    font-size: 2.875rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: 1em;
  }
}

@media (min-width:40rem) {
  .c4.k-Title--tertiary {
    font-size: 2rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--tertiary {
    font-size: 2.25rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:40rem) {
  .c4.k-Title--quaternary {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.015em;
    -moz-letter-spacing: -0.015em;
    -ms-letter-spacing: -0.015em;
    letter-spacing: -0.015em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--quaternary {
    font-size: 2rem;
    -webkit-letter-spacing: -0.02em;
    -moz-letter-spacing: -0.02em;
    -ms-letter-spacing: -0.02em;
    letter-spacing: -0.02em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:40rem) {
  .c4.k-Title--quinary {
    font-size: 1.5rem;
    -webkit-letter-spacing: -0.015em;
    -moz-letter-spacing: -0.015em;
    -ms-letter-spacing: -0.015em;
    letter-spacing: -0.015em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--quinary {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.015em;
    -moz-letter-spacing: -0.015em;
    -ms-letter-spacing: -0.015em;
    letter-spacing: -0.015em;
    line-height: calc(1em + 0.25rem);
  }
}

@media (min-width:40rem) {
  .c4.k-Title--senary {
    font-size: 1.25rem;
    -webkit-letter-spacing: -0.01em;
    -moz-letter-spacing: -0.01em;
    -ms-letter-spacing: -0.01em;
    letter-spacing: -0.01em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--senary {
    font-size: 1.5rem;
    -webkit-letter-spacing: -0.015em;
    -moz-letter-spacing: -0.015em;
    -ms-letter-spacing: -0.015em;
    letter-spacing: -0.015em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:40rem) {
  .c4.k-Title--septenary {
    font-size: 1.125rem;
    -webkit-letter-spacing: -0.01em;
    -moz-letter-spacing: -0.01em;
    -ms-letter-spacing: -0.01em;
    letter-spacing: -0.01em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--septenary {
    font-size: 1.25rem;
    -webkit-letter-spacing: -0.01em;
    -moz-letter-spacing: -0.01em;
    -ms-letter-spacing: -0.01em;
    letter-spacing: -0.01em;
    line-height: calc(1em + 0.125rem);
  }
}

@media (min-width:40rem) {
  .c6.k-Paragraph--primary {
    font-size: 1.125rem;
  }
}

@media (min-width:67.5rem) {
  .c6.k-Paragraph--primary {
    font-size: 1.25rem;
  }
}

@media (min-width:40rem) {
  .c6.k-Paragraph--secondary {
    font-size: 1rem;
  }
}

@media (min-width:67.5rem) {
  .c6.k-Paragraph--secondary {
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c6.k-Paragraph--tertiary {
    font-size: 0.875rem;
  }
}

@media (min-width:67.5rem) {
  .c6.k-Paragraph--tertiary {
    font-size: 0.875rem;
  }
}

@media (min-width:40rem) {
  .c6.k-Paragraph--quaternary {
    font-size: 0.75rem;
  }
}

@media (min-width:67.5rem) {
  .c6.k-Paragraph--quaternary {
    font-size: 0.75rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
  .c1.k-Button--orion:not(.k-Button--rounded).k-Button--big,
  .c1.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
  .c1.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
    --Button-border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    padding: 3.125rem 2.5rem;
  }
}

<div
  aria-hidden={true}
  aria-labelledby="popover-title"
  className="c0"
  role="dialog"
>
  <button
    aria-label="Close"
    className="c1 k-Button c2 k-Button--micro k-Button--hydrogen k-Button--orion k-Button--fit-icon k-Button--mobile-fit-none"
    onClick={[Function]}
    style={
      Object {
        "--Button-border-radius": null,
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      fill="#fff"
      height="8"
      viewBox="0 0 8 8"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
      />
      <path
        d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
      />
    </svg>
  </button>
  <div>
    <div
      className="c3"
    >
      <h2
        className="c4 k-Title k-Title--senary k-Title--noMargin"
        id="popover-title"
        style={
          Object {
            "--Title-css-color": null,
          }
        }
      >
        
      </h2>
    </div>
    <div
      className="c5"
    >
      <p
        className="c6 k-Paragraph k-Paragraph--tertiary"
      >
        
      </p>
    </div>
  </div>
</div>
`;
